add crud shop-product
